--- a/src/sass/ui/_modal.sass
+++ b/src/sass/ui/_modal.sass
@@ -47,6 +47,8 @@
     width: 80vw
 
   .le__modal--docked &
+    display: flex
+    flex-flow: column
     flex-grow: 1
     min-width: 300px
     width: 30%
