--- a/src/sass/ui/_tooltip.sass
+++ b/src/sass/ui/_tooltip.sass
@@ -11,6 +11,7 @@
     display: none
     font-family: var(--font-family-default)
     font-size: $le-font-size-small
+    font-weight: 500
     left: 100%
     margin-left: $le-space-small
     padding: $le-space-small
